--- a/index.ipynb
+++ b/index.ipynb
@@ -50,7 +50,7 @@
    "source": [
     "# Define Driver Class Here\n",
     "class Driver():\n",
-    "    def __init__(self, first=None, last=None, occupation=None):\n",
+    "    def __init__(self, first=None, last=None, occupation='driver'):\n",
     "        self.first\n",
     "        self.last\n",
     "        self.occupation\n",
