Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -51,8 +51,8 @@
     "# Define Driver Class Here\n",
     "class Driver():\n",
     "    def __init__(self, first=None, last=None, occupation='driver'):\n",
-    "        self.first\n",
-    "        self.last\n",
+    "        self.first = first\n",
+    "        self.last = last\n",
     "        self.occupation\n",
     "        "
    ]
