--- a/index.ipynb
+++ b/index.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
     "    def __init__(self, first=None, last=None, occupation='driver'):\n",
     "        self.first = first\n",
     "        self.last = last\n",
-    "        self.occupation\n",
+    "        self.occupation = occupation\n",
     "        "
    ]
   },
