--- a/index.ipynb
+++ b/index.ipynb
@@ -105,7 +105,8 @@
    },
    "outputs": [],
    "source": [
-    "# Define Passenger Class Here"
+    "# Define Passenger Class Here\n",
+    "P"
    ]
   },
   {
