Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -106,7 +106,8 @@
    "outputs": [],
    "source": [
     "# Define Passenger Class Here\n",
-    "P"
+    "class Passenger():\n",
+    "    def__init__"
    ]
   },
   {
