Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -107,7 +107,7 @@
    "source": [
     "# Define Passenger Class Here\n",
     "class Passenger():\n",
-    "    def__init__"
+    "    def __init__(f)"
    ]
   },
   {
