Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -107,7 +107,7 @@
    "source": [
     "# Define Passenger Class Here\n",
     "class Passenger():\n",
-    "    def __init__(first = None, last = None, )"
+    "    def __init__(first = None, last = None, rides_taken = )"
    ]
   },
   {
