Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -107,7 +107,8 @@
    "source": [
     "# Define Passenger Class Here\n",
     "class Passenger():\n",
-    "    def __init__(first = None, last = None, rides_taken = 0, email = None)\n",
+    "    def __init__(self, first = None, last = None, rides_taken = 0, email = None):\n",
+    "        sel\n",
     "    "
    ]
   },
