--- a/index.ipynb
+++ b/index.ipynb
@@ -108,7 +108,7 @@
     "# Define Passenger Class Here\n",
     "class Passenger():\n",
     "    def __init__(self, first = None, last = None, rides_taken = 0, email = None):\n",
-    "        sel\n",
+    "        self.first - \n",
     "    "
    ]
   },
