Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -108,7 +108,9 @@
     "# Define Passenger Class Here\n",
     "class Passenger():\n",
     "    def __init__(self, first = None, last = None, rides_taken = 0, email = None):\n",
-    "        self.first - \n",
+    "        self.first = first\n",
+    "        self.last = last\n",
+    "        rides\n",
     "    "
    ]
   },
