--- a/index.ipynb
+++ b/index.ipynb
@@ -110,7 +110,8 @@
     "    def __init__(self, first = None, last = None, rides_taken = 0, email = None):\n",
     "        self.first = first\n",
     "        self.last = last\n",
-    "        rides\n",
+    "        self.rides_taken = 0\n",
+    "        email \n",
     "    "
    ]
   },
