--- a/index.ipynb
+++ b/index.ipynb
@@ -111,7 +111,7 @@
     "        self.first = first\n",
     "        self.last = last\n",
     "        self.rides_taken = 0\n",
-    "        email \n",
+    "        self.email = email\n",
     "    "
    ]
   },
