--- a/index.ipynb
+++ b/index.ipynb
@@ -99,10 +99,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Define Passenger Class Here\n",
@@ -130,7 +128,7 @@
    },
    "outputs": [],
    "source": [
-    "jerry = None # initialize Mr. Seinfeld here\n",
+    "jerry = Passenger # initialize Mr. Seinfeld here\n",
     "print(jerry.first) # \"Jerry\"\n",
     "print(jerry.last) # \"Seinfeld\"\n",
     "print(jerry.email) # \"jerry.seinfeld@mailinator.com\"\n",
