Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -128,7 +128,7 @@
    },
    "outputs": [],
    "source": [
-    "jerry = Passenger(first= 'Jerry', last = 'Seinfeld', email = \"\") # initialize Mr. Seinfeld here\n",
+    "jerry = Passenger(first= 'Jerry', last = 'Seinfeld', email = \"jerry.seinfeld@mailina\") # initialize Mr. Seinfeld here\n",
     "print(jerry.first) # \"Jerry\"\n",
     "print(jerry.last) # \"Seinfeld\"\n",
     "print(jerry.email) # \"jerry.seinfeld@mailinator.com\"\n",
